--- a/src/html/map17.07.scss
+++ b/src/html/map17.07.scss
@@ -121,11 +121,14 @@
 
     &__regions {
         position: absolute;
-        right: -100%;
+        transform: translate3d(100%, 0, 0);
         visibility: hidden;
         opacity: 0;
-        transition: all 1.2s ease 0s;
-
+        transition: transform 1.2s ease 0s, opacity 1.2s ease 0s;
+        will-change: transform;
+        @media (max-width: 1024px) {
+            transition: transform 0.6s ease 0.2s, opacity 0.6s ease 0.2s;
+        }
         .__select {
             display: none;
 
@@ -136,7 +139,7 @@
 
         &._active {
             position: relative;
-            right: 0;
+            transform: translate3d(0, 0, 0);
             visibility: visible;
             opacity: 1;
         }
@@ -241,10 +244,14 @@
         counter-reset: rosnik-count;
         padding-top: 38px;
         position: absolute;
-        right: -100%;
+        transform: translate3d(100%, 0, 0);
         visibility: hidden;
         opacity: 0;
-        transition: all 1.2s ease 0s;
+        transition: transform 1.2s ease 0s, opacity 1.2s ease 0s;
+        will-change: transform;
+        @media (max-width: 1024px) {
+            transition: transform 0.6s ease 0.2s, opacity 0.6s ease 0.2s;
+        }
 
         @media (min-width: 1201px) {
             z-index: 3;
@@ -255,7 +262,7 @@
             right: 0;
             visibility: visible;
             opacity: 1;
-
+            transform: translate3d(0, 0, 0);
             min-height: 760px;
 
             @media (max-width: 1200px) {
@@ -428,46 +435,165 @@
         }
     }
 
-    // .map__next
+    // .map__norodniki
 
-    &__next {
-        display: none;
-
+    &__norodnik {
         @media (max-width: 1200px) {
-            &._active {
-                display: block;
+            padding-top: 40px !important;
+            margin-bottom: 40px;
+        }
+        font-style: normal;
+        font-weight: 600;
+        @include adaptive-value("font-size", 36, 28, 1);
+        line-height: 1.22em;
+        color: #ffffff;
+        will-change: transform;
+        position: absolute;
+        transform: translate3d(100%, 0, 0);
+        visibility: hidden;
+        opacity: 0;
+        transition: transform 1.2s ease 0s, opacity 1.2s ease 0s;
+        @media (max-width: 1024px) {
+            transition: transform 0.6s ease 0.2s, opacity 0.6s ease 0.2s;
+        }
+
+        @media (min-width: 1201px) {
+            z-index: 3;
+        }
+
+        &._active {
+            position: relative;
+            right: 0;
+            visibility: visible;
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+            min-height: 760px;
+
+            @media (max-width: 1200px) {
+                min-height: unset;
             }
         }
 
-        .rodniki__item {
-            @include adaptive-value("margin-top", 30, 18, 1);
+        // .map__norodnik-title
+
+        &-title {
+            font-style: normal;
+            font-weight: 600;
+            @include adaptive-value("font-size", 36, 28, 1);
+            @include adaptive-value("margin-bottom", 40, 18, 1);
+            line-height: 1.18em;
+            color: #ffffff;
         }
 
-        // .map__next-link
+        // .map__norodnik-selected
 
-        &-link {
-            background: #0079c2;
+        &-selected {
+            background-color: #ffffff;
+            border: 1px dashed #ffffff;
             backdrop-filter: blur(20px);
-            border-radius: 10px;
+            border-radius: 15px;
             font-weight: 600;
-            font-size: 18px;
             line-height: 1.18em;
-            text-align: center;
-            color: #ffffff;
-            width: 100%;
+            @include adaptive-value("font-size", 18, 16, 1);
+            color: #00426a;
+            @include adaptive-value("padding-top", 16, 13, 1);
+            @include adaptive-value("padding-bottom", 16, 13, 1);
+            @include adaptive-value("padding-left", 27, 16, 1);
+            @include adaptive-value("padding-right", 15, 13, 1);
             max-width: 410px;
-            @include adaptive-value("padding-top", 16, 11, 1);
-            @include adaptive-value("padding-bottom", 16, 11, 1);
-            margin: 0 auto;
-            display: block;
-            @media (max-width: 540px) {
+            margin-bottom: 0;
+            display: flex;
+            align-items: center;
+            transition: all 0.3s ease 0s;
+            @include adaptive-value("margin-bottom", 49, 25, 1);
+        }
+
+        // .map__norodnik-body
+
+        &-body {
+            border: 3px solid #ffffff;
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 410px;
+
+            @media (max-width: 1200px) {
+                max-width: 947px;
+                min-height: 300px;
+                margin: 0 auto;
+            }
+
+            @media (max-width: 992px) {
                 max-width: none;
+                border-width: 2px;
             }
         }
     }
 }
 
+.map__next {
+    visibility: visible;
+    opacity: 0;
+    display: block;
+    margin: 0 auto;
+    transition: all 0.3s ease 0s;
+    pointer-events: none;
 
+    @media (max-width: 1200px) {
+        &._active {
+            visibility: visible;
+            opacity: 1;
+            pointer-events: all;
+
+            .map__next-link {
+                max-height: 53px;
+            }
+
+            .map__next-content {
+                max-height: 165px;
+            }
+        }
+    }
+
+    .rodniki__item {
+        @include adaptive-value("margin-top", 30, 18, 1);
+    }
+
+    // .map__next-content
+
+    &-content {
+        max-height: 0;
+        overflow: hidden;
+        transition: all 0.3s ease 0.5s;
+    }
+
+    // .map__next-link
+
+    &-link {
+        background: #0079c2;
+        backdrop-filter: blur(20px);
+        border-radius: 10px;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 1.18em;
+        text-align: center;
+        color: #ffffff;
+        width: 100%;
+        max-width: 410px;
+        @include adaptive-value("height", 53, 43, 1);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+        max-height: 0;
+        transition: all 0.3s ease 0s;
+
+        @media (max-width: 540px) {
+            max-width: none;
+        }
+    }
+}
 
 .map__next-btn {
     background: #0079c2;
@@ -480,20 +606,28 @@
     color: #ffffff;
     width: 100%;
     max-width: 410px;
-    @include adaptive-value("padding-top", 16, 11, 1);
-    @include adaptive-value("padding-bottom", 16, 11, 1);
-
+    @include adaptive-value("height", 53, 43, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
+    transition: all 0.3s ease 0s;
+    pointer-events: none;
+    max-height: 0;
 
     @media (max-width: 540px) {
         max-width: none;
     }
 
-    display: none;
+    visibility: hidden;
+    opacity: 0;
 
     @media (max-width: 1200px) {
         &._active {
-            display: block;
+            visibility: visible;
+            opacity: 1;
+            pointer-events: all;
+            max-height: 53px;
         }
     }
 }
@@ -653,13 +787,16 @@
 
 #map-test {
     position: absolute;
-    left: -88px;
+    // left: -88px;
     top: 204px;
-    width: calc(100% + 88px);
+    // width: calc(100% + 88px);
     height: 100%;
     max-height: 650px;
     visibility: hidden;
     opacity: 0;
+
+    left: 0;
+    width: 100%;
 
     @include adaptive-value("top", 204, -300, 1);
 
@@ -674,21 +811,20 @@
 
 .svg,
 .svg2 {
+    will-change: opacity;
     background-color: rgba(13, 24, 87, 0);
     fill-opacity: 1;
     opacity: 1;
     max-height: 650px;
-    @media (max-width: 1700px) {
-        width: 90%;
-    }
-    @media (max-width: 1290px) {
+
+    width: 100%;
+
+    @media (max-width: 1550px) {
         width: 80%;
-    }
-    @media (max-width: 1200px) {
-        width: 100%;
     }
 
     @media (max-width: 1200px) {
+        width: 100%;
         height: 550px;
     }
 
@@ -721,9 +857,10 @@
 .mini-icon {
     z-index: 650;
     position: absolute;
-    @include adaptive-value("width", 50, 25, 1);
+    width: 25px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
+    opacity: 0;
 
     @media (any-hover: hover) {
         &:hover {
@@ -747,7 +884,7 @@
         pointer-events: none;
         position: absolute;
         // width: 10px;
-        @include adaptive-value("width", 15, 10, 1);
+        @include adaptive-value("width", 15, 8, 1);
 
         transition: all 0.3s ease 0s;
 
@@ -797,11 +934,11 @@
     &[data-state="active"] {
         .select__title {
             &::before {
-                transform: translate(-3px, -50%) rotate(-45deg);
+                transform: translate3d(-3px, -50%, 0) rotate(-45deg);
             }
 
             &::after {
-                transform: translate(3px, -50%) rotate(45deg);
+                transform: translate3d(3px, -50%, 0) rotate(45deg);
             }
         }
         .select__label {
@@ -858,10 +995,10 @@
 
             background-color: #333333;
 
-            transform: translate(-3px, -50%) rotate(45deg);
+            transform: translate3d(-3px, -50%, 0) rotate(45deg);
         }
         &::after {
-            transform: translate(3px, -50%) rotate(-45deg);
+            transform: translate3d(3px, -50%, 0) rotate(-45deg);
         }
         &:hover {
             border-color: #d8093a;
@@ -883,7 +1020,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        transition: all 0.3s ease-out;
+        transition: background-color 0.3s ease-out;
         z-index: 1;
 
         overflow: hidden;
@@ -946,10 +1083,14 @@
     }
 }
 
+.svg__parent._active .mini-icon {
+    opacity: 1;
+}
+
 .sselect__content-body {
     border-radius: 15px;
     max-height: 0;
-    transition: all 0.3s ease 0s;
+    transition: max-height 0.3s ease 0s;
     &::-webkit-scrollbar {
         width: 2px;
     }
@@ -982,6 +1123,10 @@
     fill: #0079c2;
 }
 
+.before {
+    transition: all 0.3s ease 0s;
+}
+
 .before,
 .before-r {
     position: absolute;
@@ -995,7 +1140,6 @@
 
     display: block;
     visibility: hidden;
-    transition: all 0.3s ease 0s;
     font-style: normal;
     font-weight: 600;
     line-height: 1.18em;
@@ -1046,25 +1190,19 @@
     fill-opacity: 1;
 }
 
+.path._init {
+    transition: transform 0.7s ease 0s;
+    @media (max-width: 1024px) {
+        transition: transform 0.5s ease 0s;
+    }
+}
+
 .path._biger {
     fill: #0079c2;
     flood-color: #0079c2;
     stroke-width: 1;
-    opacity: 1 !important;
     filter: url(#filter0_i_362_1838);
     fill-opacity: 1;
-}
-
-.path._init {
-    border: 1px solid black;
-    transition: transform 0.7s ease 0s;
-}
-
-.path._remove {
-    transition: transform 1s ease 0s, opacity 1s ease 0s;
-    visibility: hidden;
-    opacity: 0;
-    transform: scale(0);
 }
 
 .path._biger:hover {
@@ -1073,16 +1211,43 @@
     filter: url(#filter0_i_362_1838);
 }
 
-.path._transition {
-    transition: transform 1s ease 0s;
+.svg {
+    transition: opacity 0.6s ease 0s;
+    @media (max-width: 1024px) {
+        transition: opacity 0.5s ease 0s;
+    }
 }
 
-.path {
+.svg._hidden {
+    // transform: scale3d(0, 0, 0);
+    opacity: 0;
 }
 
-// .path.path._biger{
-// 	will-change: transform;
-// }
+.svg2 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    transition: opacity 0.6s ease 0s;
+    @media (max-width: 1024px) {
+        transition: opacity 0.5s ease 0s;
+    }
+}
+
+.svg2._visible {
+    z-index: 1;
+    // transform: scale3d(1, 1, 1);
+    opacity: 1;
+}
+
+.svg2 .path._small {
+    transform: translate(0, 0) scale(1) !important;
+}
+
+.before {
+    @include adaptive-value("width", 253, 140, 1);
+    text-align: center;
+}
 
 div {
     position: relative;
@@ -1092,21 +1257,12 @@ div {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate3(-50%, -50%, 0);
     width: 5px;
     height: 5px;
     background-color: #fff;
     z-index: 500;
     visibility: hidden;
-}
-
-.path-2 {
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    fill: transparent;
-    flood-color: transparent;
-    stroke: #000;
-    stroke-width: 2;
 }
 
 .ymaps-2-1-79-image:hover {
@@ -1115,10 +1271,7 @@ div {
 
 .svg__parent {
     z-index: 2;
-    // height: 100%;
-    // height: 600px;
-    // border: 1px solid black;
-    // overflow: hidden;
+    margin-left: 0 !important;
 }
 
 #map-test {
@@ -1152,43 +1305,142 @@ div {
     }
 }
 
-.svg {
-    transition: all 1s ease 0s;
-}
-
-.svg._hidden {
-    transform: scale(0);
-}
-
-.svg2 {
-    position: absolute;
+.rodniki__preload {
+    position: fixed;
     left: 0;
     top: 0;
-    z-index: -1;
-    transition: all 1s ease 0s;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background-color: #f9f9f9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+    transition: all 0.2s ease 0s;
+
+    &._open {
+        visibility: visible;
+        opacity: 1;
+        transform: scale(1);
+    }
+
+    img {
+        max-width: 100px;
+        display: block;
+    }
 }
 
-.svg2._visible {
-    z-index: 1;
-    transform: scale(1);
-    opacity: 1;
-}
+.regions__preload {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background-color: #f9f9f9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+    transition: all 0.2s ease 0s;
 
-.svg2 .path._small {
-    transform: none !important;
-}
+    &._open {
+        visibility: visible;
+        opacity: 1;
+        transform: scale(1);
+    }
 
-.before {
-    @include adaptive-value("width", 253, 140, 1);
-    text-align: center;
+    img {
+        max-width: 100px;
+        display: block;
+    }
 }
 
 @import "path";
 @import "path-1700";
-@import "path-1290";
+@import "path-1550";
 @import "path-1200";
 @import "path-992";
 @import "path-768";
 @import "path-640";
 @import "path-475";
 @import "path-400";
+
+.loftloader__wrapper {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: all 0.3s ease 0s;
+    z-index: -10;
+
+    span {
+        display: block;
+        width: 50px;
+        height: 50px;
+        background: #fff;
+        transform-origin: 50% 50%;
+        animation: spinReturn 2s ease infinite;
+        z-index: 2;
+
+        &:before {
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: block;
+            width: 100%;
+            height: 100%;
+            background: inherit;
+            opacity: 0.9;
+            content: "";
+            transform-origin: 50% 50%;
+            transform: rotate(45deg);
+        }
+
+        @keyframes spinReturn {
+            0% {
+                transform: rotate(0);
+            }
+            50% {
+                transform: rotate(225deg);
+            }
+            100% {
+                transform: rotate(180deg);
+            }
+        }
+    }
+
+    div {
+        position: absolute;
+        left: 0;
+        width: 100%;
+        height: 50%;
+        background-color: #0079c2;
+        z-index: 0;
+    }
+    .top {
+        top: 0;
+    }
+    .bottom {
+        bottom: 0;
+    }
+}
+
+body._loaded {
+    .loftloader__wrapper {
+        opacity: 1;
+        z-index: 101;
+    }
+}
