--- a/src/scss/rodnik_page.scss
+++ b/src/scss/rodnik_page.scss
@@ -783,7 +783,8 @@
     @include adaptive-value("margin-left", 21, 5, 1);
 }
 
-.user_score_hidden,.user_score_output {
+.user_score_hidden,
+.user_score_output {
     position: absolute;
     visibility: hidden;
     opacity: 0;
@@ -851,7 +852,6 @@
     transform: scale(0);
     transition: all 0.3s ease 0s;
 
-
     &-overlay {
         position: absolute;
         left: 0;
@@ -878,7 +878,8 @@
         margin-left: auto;
         transition: all 0.3s ease 0s;
 
-        img,.svg{
+        img,
+        .svg {
             pointer-events: none;
         }
 
@@ -918,6 +919,76 @@
             border-radius: 50%;
             width: 48px;
             height: 48px;
+        }
+    }
+}
+
+.breadcamps {
+    margin-top: 60px;
+
+    display: none;
+
+    @media (max-width: 1096px) {
+        display: block;
+    }
+
+    ol {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        counter-reset: bread-number;
+    }
+
+    li {
+        font-weight: 400;
+        @include adaptive-value("font-size", 24, 12, 1);
+        line-height: 1.2em;
+        color: #ffffff;
+        position: relative;
+
+        display: flex;
+        align-items: center;
+        &:before {
+            counter-increment: bread-number;
+            content: counter(bread-number) ". ";
+            padding-right: 5px;
+        }
+
+        a {
+            color: inherit;
+        }
+    }
+
+    // .breadcamps__back
+
+    &__back {
+        // .breadcamps__back-btn
+
+        &-btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            @include adaptive-value("width", 38, 16, 1);
+            @include adaptive-value("height", 38, 16, 1);
+            @include adaptive-value("flex-basis", 38, 16, 1);
+
+            background-color: #fff;
+            border-radius: 50%;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+            @include adaptive-value("margin-left", 25, 9, 1);
+            @include adaptive-value("margin-right", 25, 9, 1);
+
+            cursor: pointer;
+
+            img {
+                @include adaptive-value("width", 12, 5, 1);
+                pointer-events: none;
+            }
+        }
+
+        // .breadcamps__current
+
+        &__current {
         }
     }
 }
