--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -553,7 +553,6 @@
 .map__next {
     visibility: visible;
     opacity: 0;
-    margin: 0 auto;
     transition: all 0.3s ease 0s;
     pointer-events: none;
     max-height: 0;
@@ -605,7 +604,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 0 auto;
+       
         max-height: 0;
         transition: all 0.3s ease 0s;
 
@@ -630,7 +629,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
     transition: all 0.3s ease 0s;
     pointer-events: none;
     max-height: 0;
@@ -872,7 +870,10 @@
 .mini-icon {
     z-index: 650;
     position: absolute;
-    width: 25px;
+    width: 35px;
+    @media (max-width: 640px) {
+        width: 25px;
+    }
     cursor: pointer;
     transition: all 0.3s ease 0s;
     opacity: 0;
@@ -1399,40 +1400,46 @@ div {
     justify-content: center;
     z-index: 101;
     display: none;
+    transition: opacity 0.5s ease 0s;
+
+    &-before {
+        z-index: 2;
+        animation: beat 1.2s linear infinite;
+    }
+
+    &-after {
+        z-index: 5;
+        animation: beat 1.2s linear infinite 0.6s;
+    }
 
     span {
         display: block;
-        width: 50px;
-        height: 50px;
+        position: absolute;
+        top: calc(50% - 30px);
+        left: calc(50% - 30px);
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
         background: #fff;
         transform-origin: 50% 50%;
-        animation: spinReturn 2s ease infinite;
+        box-shadow: 0 0 50px #fff;
+        opacity: 0;
+
         transition: opacity 0.5s ease 0s;
-        z-index: 2;
-        @keyframes spinReturn {
+
+        @keyframes beat {
             0% {
-                transform: rotate(0);
+                transform: scale(0);
+                opacity: 0;
             }
-            50% {
-                transform: rotate(225deg);
+            80% {
+                transform: scale(1);
+                opacity: 0.7;
             }
             100% {
-                transform: rotate(180deg);
+                transform: scale(1);
+                opacity: 0;
             }
-        }
-
-        &:before {
-            position: absolute;
-            top: 0;
-            left: 0;
-            display: block;
-            width: 100%;
-            height: 100%;
-            background: inherit;
-            opacity: 0.9;
-            content: "";
-            transform-origin: 50% 50%;
-            transform: rotate(45deg);
         }
     }
 
@@ -1440,18 +1447,12 @@ div {
         position: absolute;
         left: 0;
         width: 100%;
-        height: 50%;
+        height: 100%;
         background-color: #0079c2;
         z-index: 0;
-        transition: opacity 0.5s ease 0s, transform 0.5s ease 0s;
+        transition: opacity 1s ease 0s;
         opacity: 0;
-        will-change: transform;
-    }
-    .top {
-        top: 0;
-    }
-    .bottom {
-        bottom: 0;
+        will-change: opacity;
     }
 }
 
@@ -1463,26 +1464,15 @@ body._loaded {
     .loftloader__wrapper div {
         opacity: 1;
     }
-
-    .loftloader__wrapper .top {
-        // transform: translate(0, -50vh);
-    }
-    .loftloader__wrapper .bottom {
-        // transform: translate(0, 50vh);
-    }
 }
 
 body._loaded2 {
-    .loftloader__wrapper span {
+    .loftloader__wrapper,
+    .loftloader__wrapper div {
         opacity: 0;
-        animation-duration: 8s;
     }
-
-    .loftloader__wrapper .top {
-        transform: translate(0, -50vh);
-    }
-
-    .loftloader__wrapper .bottom {
-        transform: translate(0, 50vh);
+    span {
+        animation-play-state: paused;
+        opacity: 0;
     }
 }
