--- a/src/scss/map.scss
+++ b/src/scss/map.scss
@@ -1471,7 +1471,7 @@ body._loaded2 {
     .loftloader__wrapper div {
         opacity: 0;
     }
-    span {
+    .loftloader__wrapper span {
         animation-play-state: paused;
         opacity: 0;
     }
