--- a/src/scss/rodnik_page.scss
+++ b/src/scss/rodnik_page.scss
@@ -227,7 +227,7 @@
         // .rodnik__info-item
 
         &-item {
-            img {
+            img,svg {
                 @include adaptive-value("width", 44, 39, 1);
                 @include adaptive-value("margin-right", 28, 17, 1);
             }
@@ -878,6 +878,12 @@
     transform: scale(0);
     transition: all 0.3s ease 0s;
 
+    &._open {
+        visibility: visible;
+        opacity: 1;
+        transform: scale(1);
+    }
+
     &-overlay {
         position: absolute;
         left: 0;
@@ -946,6 +952,16 @@
             width: 48px;
             height: 48px;
         }
+    }
+}
+
+.form__output._error-text,
+.form__output._error-ocenka {
+    justify-content: flex-start;
+    align-items: flex-end;
+    .form__output-body {
+        margin-left: 37vh;
+        margin-bottom: 15px;
     }
 }
 
