--- a/src/scss/rodnik_page.scss
+++ b/src/scss/rodnik_page.scss
@@ -227,7 +227,8 @@
         // .rodnik__info-item
 
         &-item {
-            img,svg {
+            img,
+            svg {
                 @include adaptive-value("width", 44, 39, 1);
                 @include adaptive-value("margin-right", 28, 17, 1);
             }
@@ -864,36 +865,30 @@
 
 .form__output {
     position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     z-index: 150;
+    bottom: -100px;
+    right: 0;
 
     visibility: hidden;
     opacity: 0;
-    transform: scale(0);
     transition: all 0.3s ease 0s;
 
     &._open {
         visibility: visible;
         opacity: 1;
-        transform: scale(1);
+        bottom: 0;
     }
 
-    &-overlay {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 0;
-        cursor: pointer;
-    }
+    // &-overlay {
+    //     position: absolute;
+    //     left: 0;
+    //     top: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     background-color: rgba(0, 0, 0, 0.5);
+    //     z-index: 0;
+    //     cursor: pointer;
+    // }
 
     // .form__output-body
 
@@ -907,12 +902,16 @@
     &-close {
         display: block;
         margin-bottom: 15px;
-        margin-left: auto;
+        margin-right: auto;
         transition: all 0.3s ease 0s;
+        background-color: #004771;
+        padding: 2px;
+        border-radius: 3px;
 
         img,
         .svg {
             pointer-events: none;
+            display: block;
         }
 
         @media (any-hover: hover) {
@@ -927,7 +926,7 @@
     &-content {
         background-color: #ffffff;
         box-shadow: 0px 4px 9px rgba(0, 87, 145, 0.15);
-        border-radius: 10px;
+        border-radius: 10px 0 0 0;
         width: 257px;
         font-style: normal;
         font-weight: 600;
@@ -955,13 +954,19 @@
     }
 }
 
-.form__output._error-text,
-.form__output._error-ocenka {
-    justify-content: flex-start;
-    align-items: flex-end;
-    .form__output-body {
-        margin-left: 37vh;
-        margin-bottom: 15px;
+.form__error-container {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    & > :last-child {
+        margin-top: 20px;
+    }
+    .form__output {
+        &._open{
+            position: relative;
+        }
     }
 }
 
