finish mothger fucker

--- a/src/scss/path-1700.scss
+++ b/src/scss/path-1700.scss
@@ -64,7 +64,7 @@
     }
 
     .path21._biger {
-        transform: translate3d(calc(0% - 88px), 6%, 0) scale(4.5) !important;
+        transform: translate3d(-88px, 6%, 0) scale(4.5) !important;
     }
 
     .path22._biger {
