--- a/src/scss/rodnik_page.scss
+++ b/src/scss/rodnik_page.scss
@@ -38,6 +38,20 @@
 .rodnik-main {
     margin-bottom: 104px;
     padding-bottom: 0;
+    position: relative;
+
+    &:before {
+        position: absolute;
+        content: "";
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(0deg, rgba(0, 93, 149, 0.76), rgba(0, 93, 149, 0.76)), url(M0992955);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        z-index: 0;
+    }
+
     // .rodnik-main__container
 
     &__container {
@@ -364,23 +378,38 @@
         }
 
         a {
+            @include adaptive-value("border-radius", 15, 5, 1);
+            overflow: hidden;
             display: block;
+            @include adaptive-value("width", 416, 160, 1);
+            @include adaptive-value("height", 270, 105, 1);
+
+            @media (max-width: 374px) {
+                max-width: 50%;
+                height: 90px;
+            }
         }
 
         img {
             display: block;
-            @include adaptive-value("max-width", 416, 160, 1);
-
-            @media (max-width: 374px) {
-                max-width: 100%;
-            }
+            width: 100%;
+            height: 100%;
         }
 
         div {
-            @include adaptive-value('border-radius', 15, 5, 1);
+            @include adaptive-value("width", 416, 160, 1);
+            @include adaptive-value("border-radius", 15, 5, 1);
             overflow: hidden;
             border: 1px dashed #0079c2;
             background-color: #fff;
+            max-height: 270px;
+            @include adaptive-value("height", 270, 105, 1);
+
+            @media (max-width: 374px) {
+                width: 50%;
+                height: 90px;
+            }
+
             img {
                 position: relative;
                 z-index: -2;
