--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -979,3 +979,19 @@ main._zindeed {
 
 @import "rodnik_page";
 @import "map";
+
+.heading-404{
+    @include adaptive-value('font-size', 90, 36, 1);
+    text-align: center;
+    line-height: 1;
+    font-weight: 700;
+    color: #003251;
+    @include adaptive-value('margin-top', 153, 59, 1);
+    span{
+        font-size: 0.5em;
+    }
+}
+
+.main-404{
+    @include adaptive-value('padding-top', 123, 57, 1);
+} 
